// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkButtonDestructive should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--destructive"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--destructive"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--destructive"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--destructive"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--destructive"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--destructive"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--destructive"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--destructive"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--destructive"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--destructive"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonDestructive should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--destructive custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--featured"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--featured"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--featured"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--featured"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--featured"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--featured"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--featured"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonFeatured should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--featured custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link bpk-button--link-large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link bpk-button--link-large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--link"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link bpk-button--link-large custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link-on-dark bpk-button--link-on-dark-large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link-on-dark"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link-on-dark"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link-on-dark"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--link-on-dark"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link-on-dark bpk-button--link-on-dark-large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--link-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLinkOnDark should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link-on-dark bpk-button--link-on-dark-large custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimary should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-dark"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-dark"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-dark"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-dark"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--primary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnDark should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-dark custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-light"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-light"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-light"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-light"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-light"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-light"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-light"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--primary-on-light"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-light"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--primary-on-light"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonPrimaryOnLight should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-light custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--secondary"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondary should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button bpk-button--secondary-on-dark"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only bpk-button--secondary-on-dark"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButtonSecondaryOnDark should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;
